--- a/index.html
+++ b/index.html
@@ -6,204 +6,92 @@
     <title>Image Analysis Tool</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
-        :root {
-            --primary: #6366f1;
-            --secondary: #4f46e5;
-            --accent: #8b5cf6;
-            --light: #f8fafc;
-            --dark: #1e293b;
-        }
-
         body {
-            background: linear-gradient(135deg, #f8fafc 0%, #e2e8f0 100%);
+            background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
             min-height: 100vh;
-            font-family: 'Segoe UI', system-ui, sans-serif;
         }
-
         .card {
-            border: none;
-            border-radius: 1rem;
-            box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
-            background: rgba(255, 255, 255, 0.95);
-            backdrop-filter: blur(10px);
+            border-radius: 15px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
-
-        .btn-primary {
-            background: var(--primary);
-            border: none;
-            padding: 0.75rem 1.5rem;
-            border-radius: 0.5rem;
-            transition: all 0.2s;
-            display: inline-flex;
-            align-items: center;
-            gap: 0.5rem;
-        }
-
-        .btn-primary:hover {
-            background: var(--secondary);
-            transform: translateY(-2px);
-            box-shadow: 0 4px 6px -1px rgba(99, 102, 241, 0.3);
-        }
-
-        .upload-section {
-            border: 2px dashed var(--primary);
-            border-radius: 1rem;
-            padding: 2rem;
-            text-align: center;
-            transition: all 0.2s;
-            background: rgba(99, 102, 241, 0.05);
-        }
-
-        .upload-section:hover {
-            background: rgba(99, 102, 241, 0.1);
-            transform: translateY(-2px);
-        }
-
-        .preview-container {
-            position: relative;
-            border-radius: 1rem;
-            overflow: hidden;
-            background: var(--dark);
-        }
-
-        .analysis-result {
-            background: linear-gradient(135deg, var(--primary), var(--accent));
+        .btn-custom {
+            background: #4a90e2;
             color: white;
-            border-radius: 0.75rem;
-            padding: 1.5rem;
-            position: relative;
-            overflow: hidden;
+            padding: 12px 24px;
+            border-radius: 25px;
+            transition: all 0.3s;
         }
-
-        .data-table {
+        .btn-custom:hover {
+            background: #357abd;
+            transform: translateY(-2px);
+        }
+        #preview {
+            max-width: 100%;
+            height: auto;
+            border-radius: 10px;
+        }
+        .result-box {
             background: white;
-            border-radius: 0.75rem;
-            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            border-radius: 10px;
+            margin-top: 20px;
         }
-
-        .progress-indicator {
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: rgba(255, 255, 255, 0.9);
-            display: none;
-            place-items: center;
-            z-index: 1000;
-        }
-
-        .floating-input {
-            border: 2px solid #e2e8f0;
-            border-radius: 0.75rem;
-            padding: 1rem;
-            transition: all 0.2s;
-        }
-
-        .floating-input:focus {
-            border-color: var(--primary);
-            box-shadow: 0 0 0 3px rgba(99, 102, 241, 0.2);
+        table {
+            background: white;
+            margin-top: 20px;
         }
     </style>
 </head>
 <body>
     <div class="container py-5">
         <div class="row justify-content-center">
-            <div class="col-lg-10">
+            <div class="col-md-8">
                 <div class="card p-4">
-                    <h1 class="text-center mb-4 display-5 fw-bold text-dark">
-                        <i class="fas fa-camera-retro me-2"></i>Image Analyzer
-                    </h1>
-
-                    <!-- Upload Section -->
-                    <div class="upload-section mb-4" onclick="document.getElementById('fileInput').click()">
-                        <div class="h4 text-muted mb-3">
-                            <i class="fas fa-cloud-upload-alt fa-2x mb-3"></i><br>
-                            Click to capture or upload image
-                        </div>
-                        <div class="text-muted small">
-                            Supports JPEG, PNG (Max 5MB)
-                        </div>
+                    <h1 class="text-center mb-4">Image Analysis Tool</h1>
+                    
+                    <!-- Image Selection -->
+                    <div class="text-center">
+                        <button class="btn btn-custom mb-2" onclick="document.getElementById('fileInput').click()">
+                            Open Camera
+                        </button>
+                        <button class="btn btn-custom mb-2" onclick="document.getElementById('galleryInput').click()">
+                            Choose from Gallery
+                        </button>
+                        <input type="file" id="fileInput" capture="environment" accept="image/*" hidden>
+                        <input type="file" id="galleryInput" accept="image/*" hidden>
                     </div>
 
-                    <input type="file" id="fileInput" accept="image/*" hidden>
-
-                    <!-- Image Preview & Editing -->
-                    <div id="editorSection" class="d-none">
-                        <div class="preview-container mb-4">
+                    <!-- Image Preview -->
+                    <div id="imageSection" class="d-none">
+                        <div class="mb-3">
                             <img id="preview" class="img-fluid">
                         </div>
-                        <div class="d-grid gap-2">
-                            <button class="btn btn-primary" onclick="cropImage()">
-                                <i class="fas fa-crop-alt"></i> Analyze Selection
-                            </button>
-                        </div>
+                        <button class="btn btn-custom w-100" onclick="cropImage()">Crop Image</button>
                     </div>
 
-                    <!-- Analysis Results -->
-                    <div id="resultSection" class="d-none">
-                        <div class="analysis-result mb-4">
-                            <div class="row">
-                                <div class="col-md-6 mb-3">
-                                    <div class="h5 mb-2">Color Analysis</div>
-                                    <div class="d-flex align-items-center gap-2">
-                                        <div class="color-preview rounded-circle" 
-                                             style="width: 30px; height: 30px; background: #fff"></div>
-                                        <span id="rgbResult" class="h5 mb-0">—</span>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="h5 mb-2">Grayscale Value</div>
-                                    <div class="h2 fw-bold" id="grayscaleResult">—</div>
-                                </div>
-                            </div>
+                    <!-- Data Input -->
+                    <div id="inputSection" class="d-none">
+                        <div class="result-box">
+                            <p>Average RGB: <span id="rgbResult"></span></p>
+                            <p>Grayscale Average: <span id="grayscaleResult"></span></p>
                         </div>
-
-                        <div class="mb-4">
-                            <label class="form-label h5">Concentration Value</label>
-                            <input type="number" id="concentration" 
-                                   class="form-control floating-input" 
-                                   placeholder="Enter concentration...">
-                        </div>
-
-                        <div class="d-grid gap-2">
-                            <button class="btn btn-primary" onclick="saveData()">
-                                <i class="fas fa-save"></i> Save Analysis
-                            </button>
-                        </div>
+                        <input type="number" id="concentration" class="form-control mb-3" placeholder="Enter concentration value">
+                        <button class="btn btn-custom w-100" onclick="saveData()">Save Data</button>
                     </div>
 
                     <!-- Data Table -->
-                    <div id="dataSection" class="mt-5 d-none">
-                        <div class="d-flex justify-content-between align-items-center mb-3">
-                            <h4 class="mb-0">Saved Analyses</h4>
-                            <button class="btn btn-sm btn-outline-primary" onclick="exportData()">
-                                <i class="fas fa-download"></i> Export
-                            </button>
-                        </div>
-                        <div class="data-table">
-                            <div class="table-responsive">
-                                <table class="table table-hover align-middle">
-                                    <thead class="bg-light">
-                                        <tr>
-                                            <th>Grayscale</th>
-                                            <th>Concentration</th>
-                                            <th style="width: 40px"></th>
-                                        </tr>
-                                    </thead>
-                                    <tbody id="tableBody"></tbody>
-                                </table>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Progress Indicator -->
-                    <div class="progress-indicator" id="loader">
-                        <div class="spinner-border text-primary" role="status">
-                            <span class="visually-hidden">Loading...</span>
-                        </div>
+                    <div id="dataTable" class="mt-4 d-none">
+                        <h4 class="mb-3">Saved Data</h4>
+                        <table class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th>Grayscale</th>
+                                    <th>Concentration</th>
+                                </tr>
+                            </thead>
+                            <tbody id="tableBody"></tbody>
+                        </table>
                     </div>
                 </div>
             </div>
@@ -213,12 +101,96 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.js"></script>
     <script>
-        // Existing JavaScript code with the following additions:
-        // 1. Add loader animations
-        // 2. Add color preview functionality
-        // 3. Add data export functionality
-        // 4. Add table row deletion
-        // 5. Add input validation with better feedback
+        let cropper;
+        let currentImage;
+
+        // Handle image selection
+        document.getElementById('fileInput').addEventListener('change', handleImage);
+        document.getElementById('galleryInput').addEventListener('change', handleImage);
+
+        function handleImage(e) {
+            const file = e.target.files[0];
+            if (!file) return;
+
+            const reader = new FileReader();
+            reader.onload = (event) => {
+                document.getElementById('imageSection').classList.remove('d-none');
+                const image = document.getElementById('preview');
+                image.src = event.target.result;
+                
+                if (cropper) cropper.destroy();
+                cropper = new Cropper(image, {
+                    aspectRatio: 1,
+                    viewMode: 1,
+                    autoCropArea: 0.8
+                });
+            };
+            reader.readAsDataURL(file);
+        }
+
+        function cropImage() {
+            const canvas = cropper.getCroppedCanvas();
+            currentImage = canvas.toDataURL('image/jpeg');
+            document.getElementById('imageSection').classList.add('d-none');
+            processImage(canvas);
+        }
+
+        function processImage(canvas) {
+            const ctx = canvas.getContext('2d');
+            const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
+            const data = imageData.data;
+
+            let r = 0, g = 0, b = 0;
+            for (let i = 0; i < data.length; i += 4) {
+                r += data[i];
+                g += data[i + 1];
+                b += data[i + 2];
+            }
+
+            const totalPixels = data.length / 4;
+            const avgR = Math.round(r / totalPixels);
+            const avgG = Math.round(g / totalPixels);
+            const avgB = Math.round(b / totalPixels);
+            const grayscale = Math.round((avgR + avgG + avgB) / 3);
+
+            document.getElementById('rgbResult').textContent = `${avgR}, ${avgG}, ${avgB}`;
+            document.getElementById('grayscaleResult').textContent = grayscale;
+            document.getElementById('inputSection').classList.remove('d-none');
+        }
+
+        function saveData() {
+            const concentration = document.getElementById('concentration').value;
+            if (!concentration) {
+                alert('Please enter concentration value');
+                return;
+            }
+
+            const grayscale = document.getElementById('grayscaleResult').textContent;
+            const data = JSON.parse(localStorage.getItem('imageData') || '[]');
+            data.push({ grayscale, concentration });
+            localStorage.setItem('imageData', JSON.stringify(data));
+
+            updateTable();
+            document.getElementById('inputSection').classList.add('d-none');
+            document.getElementById('dataTable').classList.remove('d-none');
+        }
+
+        function updateTable() {
+            const data = JSON.parse(localStorage.getItem('imageData') || '[]');
+            const tbody = document.getElementById('tableBody');
+            tbody.innerHTML = data.map(item => `
+                <tr>
+                    <td>${item.grayscale}</td>
+                    <td>${item.concentration}</td>
+                </tr>
+            `).join('');
+        }
+
+        // Initial table load
+        updateTable();
+        if (localStorage.getItem('imageData')) {
+            document.getElementById('dataTable').classList.remove('d-none');
+        }
     </script>
 </body>
 </html>
