--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
             padding: 10px 20px;
             border-radius: 5px;
         }
+        .table-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 15px;
+        }
     </style>
 </head>
 <body>
@@ -114,7 +120,10 @@
 
                     <!-- Data Table -->
                     <div id="dataTable" class="mt-4 d-none">
-                        <h4 class="mb-3">Saved Data</h4>
+                        <div class="table-header">
+                            <h4>Saved Data</h4>
+                            <button class="btn btn-custom" onclick="downloadCSV()">Download CSV</button>
+                        </div>
                         <table class="table table-striped">
                             <thead>
                                 <tr>
@@ -259,6 +268,30 @@
                     <td>${item.concentration}</td>
                 </tr>
             `).join('');
+        }
+
+        function downloadCSV() {
+            const data = JSON.parse(localStorage.getItem('imageData') || '[]');
+            if (data.length === 0) {
+                alert('No data to download');
+                return;
+            }
+
+            const csvContent = [
+                ['Grayscale', 'Concentration'].join(','),
+                ...data.map(item => [item.grayscale, item.concentration].join(','))
+            ].join('\n');
+
+            const blob = new Blob([csvContent], { type: 'text/csv;charset=utf-8;' });
+            const link = document.createElement('a');
+            const url = URL.createObjectURL(blob);
+            
+            link.setAttribute('href', url);
+            link.setAttribute('download', 'image_data.csv');
+            link.style.visibility = 'hidden';
+            document.body.appendChild(link);
+            link.click();
+            document.body.removeChild(link);
         }
 
         // Initial table load
