--- a/index.html
+++ b/index.html
@@ -74,11 +74,22 @@
             padding: 10px 20px;
             border-radius: 5px;
         }
-        .table-header {
+        .download-btn {
+            background: #28a745;
+            color: white;
+            padding: 8px 16px;
+            border-radius: 20px;
+            transition: all 0.3s;
+        }
+        .download-btn:hover {
+            background: #218838;
+            transform: translateY(-2px);
+        }
+        .header-section {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-bottom: 15px;
+            margin-bottom: 1rem;
         }
     </style>
 </head>
@@ -120,9 +131,11 @@
 
                     <!-- Data Table -->
                     <div id="dataTable" class="mt-4 d-none">
-                        <div class="table-header">
+                        <div class="header-section">
                             <h4>Saved Data</h4>
-                            <button class="btn btn-custom" onclick="downloadCSV()">Download CSV</button>
+                            <button class="btn download-btn" onclick="downloadExcel()">
+                                Download Excel
+                            </button>
                         </div>
                         <table class="table table-striped">
                             <thead>
@@ -259,6 +272,32 @@
             document.getElementById('dataTable').classList.remove('d-none');
         }
 
+        function downloadExcel() {
+            const data = JSON.parse(localStorage.getItem('imageData') || '[]');
+            if (data.length === 0) {
+                alert('No data available to download');
+                return;
+            }
+
+            // Create CSV content
+            const csvContent = [
+                ['Grayscale', 'Concentration'],
+                ...data.map(item => [item.grayscale, item.concentration])
+            ].map(row => row.join(',')).join('\n');
+
+            // Create and trigger download
+            const blob = new Blob([csvContent], { type: 'text/csv;charset=utf-8;' });
+            const link = document.createElement('a');
+            const url = URL.createObjectURL(blob);
+            
+            link.setAttribute('href', url);
+            link.setAttribute('download', 'image_analysis_data.csv');
+            link.style.visibility = 'hidden';
+            document.body.appendChild(link);
+            link.click();
+            document.body.removeChild(link);
+        }
+
         function updateTable() {
             const data = JSON.parse(localStorage.getItem('imageData') || '[]');
             const tbody = document.getElementById('tableBody');
@@ -268,37 +307,14 @@
                     <td>${item.concentration}</td>
                 </tr>
             `).join('');
-        }
-
-        function downloadCSV() {
-            const data = JSON.parse(localStorage.getItem('imageData') || '[]');
-            if (data.length === 0) {
-                alert('No data to download');
-                return;
-            }
-
-            const csvContent = [
-                ['Grayscale', 'Concentration'].join(','),
-                ...data.map(item => [item.grayscale, item.concentration].join(','))
-            ].join('\n');
-
-            const blob = new Blob([csvContent], { type: 'text/csv;charset=utf-8;' });
-            const link = document.createElement('a');
-            const url = URL.createObjectURL(blob);
             
-            link.setAttribute('href', url);
-            link.setAttribute('download', 'image_data.csv');
-            link.style.visibility = 'hidden';
-            document.body.appendChild(link);
-            link.click();
-            document.body.removeChild(link);
+            // Show/hide data table section
+            const dataTable = document.getElementById('dataTable');
+            data.length > 0 ? dataTable.classList.remove('d-none') : dataTable.classList.add('d-none');
         }
 
         // Initial table load
         updateTable();
-        if (localStorage.getItem('imageData')) {
-            document.getElementById('dataTable').classList.remove('d-none');
-        }
     </script>
 </body>
 </html>
