--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Image Analysis Tool</title>
-  <!-- Google Fonts for modern typography -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
     rel="stylesheet"
@@ -16,27 +14,19 @@
   />
   <style>
     body {
-      font-family: 'Roboto', sans-serif;
-      background: linear-gradient(135deg, #f0f4ff, #d9e2f3);
+      background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
       min-height: 100vh;
     }
     .card {
       border-radius: 15px;
-      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
-      background: #ffffff;
-    }
-    h1 {
-      font-weight: 700;
-      color: #333;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     }
     .btn-custom {
       background: #4a90e2;
       color: white;
       padding: 12px 24px;
-      border: none;
       border-radius: 25px;
       transition: all 0.3s;
-      font-weight: 500;
     }
     .btn-custom:hover {
       background: #357abd;
@@ -46,17 +36,15 @@
       max-width: 100%;
       height: auto;
       border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     }
     .result-box {
-      background: #fafafa;
+      background: white;
       padding: 20px;
       border-radius: 10px;
       margin-top: 20px;
-      box-shadow: 0 3px 8px rgba(0, 0, 0, 0.05);
     }
     table {
-      background: #fff;
+      background: white;
       margin-top: 20px;
     }
     .modal-dialog {
@@ -67,7 +55,6 @@
     .modal-content {
       height: 100%;
       background: rgba(0, 0, 0, 0.9);
-      border: none;
     }
     #croppingModal .img-container {
       height: 100%;
@@ -76,9 +63,8 @@
       justify-content: center;
     }
     #croppingImage {
-      max-width: 90%;
+      max-width: 100%;
       max-height: 80vh;
-      border-radius: 10px;
     }
     .modal-footer {
       position: fixed;
@@ -93,14 +79,11 @@
       margin: 0 10px;
       padding: 10px 20px;
       border-radius: 5px;
-      border: none;
-      font-weight: 500;
     }
     .download-btn {
       background: #28a745;
       color: white;
       padding: 8px 16px;
-      border: none;
       border-radius: 20px;
       transition: all 0.3s;
     }
@@ -114,22 +97,15 @@
       align-items: center;
       margin-bottom: 1rem;
     }
-    /* Subtle fade-in animation */
-    .fade-in {
-      animation: fadeIn 0.5s ease-in-out;
-    }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(10px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
   </style>
 </head>
 <body>
   <div class="container py-5">
     <div class="row justify-content-center">
       <div class="col-md-8">
-        <div class="card p-4 fade-in">
+        <div class="card p-4">
           <h1 class="text-center mb-4">Image Analysis Tool</h1>
+
           <!-- Image Selection -->
           <div class="text-center">
             <button class="btn btn-custom mb-2" onclick="document.getElementById('fileInput').click()">
@@ -163,7 +139,9 @@
           <div id="dataTable" class="mt-4 d-none">
             <div class="header-section">
               <h4>Saved Data</h4>
-              <button class="btn download-btn" onclick="downloadExcel()">Download Excel</button>
+              <button class="btn download-btn" onclick="downloadExcel()">
+                Download Excel
+              </button>
             </div>
             <table class="table table-striped">
               <thead>
@@ -195,7 +173,6 @@
     </div>
   </div>
 
-  <!-- JS Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.js"></script>
   <script>
@@ -237,6 +214,7 @@
             zoomOnWheel: true,
             wheelZoomRatio: 0.1,
             ready() {
+              // Clear any preset crop box so the user can start fresh
               cropper.clear();
             }
           });
