--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 <body>
     <div class="hero-section">
         <div class="container">
-            <h1 class="display-4 mb-4">BioAnalysis Toolkit</h1>
-            <p class="lead text-muted mb-5">Advanced tools for concentration analysis and image processing</p>
+            <h1 class="display-4 mb-4">Analysis Toolkit</h1>
+            <p class="lead text-muted mb-5">Tools for concentration analysis and image processing</p>
             
             <div class="row justify-content-center">
                 <div class="col-md-5">
@@ -83,8 +83,8 @@
                     <div class="tool-card">
                         <i class="fas fa-image card-icon"></i>
                         <h3>Image Analysis Tool</h3>
-                        <p>Convert images to greyscale values and map to concentration measurements</p>
-                        <a href="p2g_convertor.html" class="btn btn-custom">
+                        <p>Convert images to greyscale values to create datasets</p>
+                        <a href="p2g convertor.html" class="btn btn-custom">
                             Open Tool <i class="fas fa-arrow-right ms-2"></i>
                         </a>
                     </div>
