--- a/concentrationpredictor.html
+++ b/concentrationpredictor.html
@@ -1,202 +1,234 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Concentration Predictor</title>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+        rel="stylesheet"
     />
     <style>
-      .container {
-        max-width: 800px;
-        margin: 40px auto;
-      }
-      #plot {
-        width: 100%;
-        height: 500px;
-      }
+        .container {
+            max-width: 800px;
+            margin: 40px auto;
+        }
+        #plot {
+            width: 100%;
+            height: 500px;
+        }
     </style>
-  </head>
-  <body>
+</head>
+<body>
     <div class="container">
-      <h1 class="mb-4">Concentration Predictor</h1>
+        <h1 class="mb-4">Concentration Predictor</h1>
 
-      <div class="card mb-4">
-        <div class="card-body">
-          <h5 class="card-title">Upload Data</h5>
-          <input
-            type="file"
-            id="excelFile"
-            class="form-control"
-            accept=".xlsx"
-          />
-          <small class="form-text text-muted">
-            Excel file should have greyscale values in first column and
-            concentration in second column
-          </small>
-        </div>
-      </div>
-
-      <div class="card mb-4">
-        <div class="card-body">
-          <h5 class="card-title">Prediction</h5>
-          <div class="row">
-            <div class="col-md-6">
-              <input
-                type="number"
-                id="greyscaleInput"
-                class="form-control"
-                placeholder="Enter greyscale value"
-                step="any"
-              />
+        <div class="card mb-4">
+            <div class="card-body">
+                <h5 class="card-title">Upload Data</h5>
+                <input
+                    type="file"
+                    id="dataFile"
+                    class="form-control"
+                    accept=".xlsx, .csv"
+                />
+                <small class="form-text text-muted">
+                    Upload an Excel (.xlsx) or CSV (.csv) file with greyscale values in the first column and concentration in the second column.
+                </small>
             </div>
-            <div class="col-md-6">
-              <button onclick="predict()" class="btn btn-primary">
-                Predict Concentration
-              </button>
-            </div>
-          </div>
-          <div id="predictionResult" class="mt-3"></div>
         </div>
-      </div>
 
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Regression Plot</h5>
-          <div id="plot"></div>
+        <div class="card mb-4">
+            <div class="card-body">
+                <h5 class="card-title">Prediction</h5>
+                <div class="row">
+                    <div class="col-md-6">
+                        <input
+                            type="number"
+                            id="greyscaleInput"
+                            class="form-control"
+                            placeholder="Enter greyscale value"
+                            step="any"
+                        />
+                    </div>
+                    <div class="col-md-6">
+                        <button onclick="predict()" class="btn btn-primary">
+                            Predict Concentration
+                        </button>
+                    </div>
+                </div>
+                <div id="predictionResult" class="mt-3"></div>
+            </div>
         </div>
-      </div>
+
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Regression Plot</h5>
+                <div id="plot"></div>
+            </div>
+        </div>
     </div>
 
     <script>
-      let regressionModel = { slope: 0, intercept: 0 };
-      let dataPoints = [];
-      let predictedPoint = null;
+        let regressionModel = { slope: 0, intercept: 0 };
+        let dataPoints = [];
+        let predictedPoint = null;
 
-      // Handle Excel file upload
-      document
-        .getElementById("excelFile")
-        .addEventListener("change", function (e) {
-          const file = e.target.files[0];
-          const reader = new FileReader();
+        // Handle file upload
+        document
+            .getElementById("dataFile")
+            .addEventListener("change", function (e) {
+                const file = e.target.files[0];
+                const reader = new FileReader();
 
-          reader.onload = function (e) {
-            const data = new Uint8Array(e.target.result);
-            const workbook = XLSX.read(data, { type: "array" });
-            const worksheet = workbook.Sheets[workbook.SheetNames[0]];
-            const jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1 });
+                reader.onload = function (e) {
+                    const fileExtension = file.name.split(".").pop().toLowerCase();
+                    if (fileExtension === "xlsx") {
+                        const data = new Uint8Array(e.target.result);
+                        const workbook = XLSX.read(data, { type: "array" });
+                        const worksheet = workbook.Sheets[workbook.SheetNames[0]];
+                        const jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1 });
+                        processData(jsonData);
+                    } else if (fileExtension === "csv") {
+                        const csvData = e.target.result;
+                        const jsonData = parseCSV(csvData);
+                        processData(jsonData);
+                    } else {
+                        alert("Unsupported file type. Please upload an Excel (.xlsx) or CSV (.csv) file.");
+                    }
+                };
 
+                if (file) {
+                    if (file.name.split(".").pop().toLowerCase() === "xlsx") {
+                        reader.readAsArrayBuffer(file);
+                    } else {
+                        reader.readAsText(file);
+                    }
+                }
+            });
+
+        function parseCSV(csvData) {
+            const lines = csvData.split("\n");
+            const result = [];
+            const headers = lines[0].split(",");
+            for (let i = 1; i < lines.length; i++) {
+                const obj = [];
+                const currentline = lines[i].split(",");
+                for (let j = 0; j < headers.length; j++) {
+                    obj[j] = currentline[j];
+                }
+                result.push(obj);
+            }
+            return result;
+        }
+
+        function processData(jsonData) {
             dataPoints = jsonData.slice(1).map((row) => ({
-              x: parseFloat(row[0]),
-              y: parseFloat(row[1]),
+                x: parseFloat(row[0]),
+                y: parseFloat(row[1]),
             }));
 
             predictedPoint = null; // Reset prediction when new data is loaded
             calculateRegression();
             plotData();
-          };
-
-          reader.readAsArrayBuffer(file);
-        });
-
-      function calculateRegression() {
-        const x = dataPoints.map((p) => p.x);
-        const y = dataPoints.map((p) => p.y);
-        const n = x.length;
-
-        const sumX = x.reduce((a, b) => a + b, 0);
-        const sumY = y.reduce((a, b) => a + b, 0);
-        const sumXY = x.reduce((a, b, i) => a + b * y[i], 0);
-        const sumX2 = x.reduce((a, b) => a + b * b, 0);
-
-        regressionModel.slope =
-          (n * sumXY - sumX * sumY) / (n * sumX2 - sumX * sumX);
-        regressionModel.intercept = (sumY - regressionModel.slope * sumX) / n;
-      }
-
-      function plotData() {
-        const x = dataPoints.map((p) => p.x);
-        const y = dataPoints.map((p) => p.y);
-
-        // Generate regression line points
-        const xRange = [Math.min(...x), Math.max(...x)];
-        const yRange = [
-          regressionModel.slope * xRange[0] + regressionModel.intercept,
-          regressionModel.slope * xRange[1] + regressionModel.intercept,
-        ];
-
-        const trace1 = {
-          x: x,
-          y: y,
-          mode: "markers",
-          type: "scatter",
-          name: "Data Points",
-          marker: { color: "blue" },
-        };
-
-        const trace2 = {
-          x: xRange,
-          y: yRange,
-          mode: "lines",
-          type: "scatter",
-          name: "Regression Line",
-          line: { color: "green" },
-        };
-
-        // Add predicted point if available
-        const traces = [trace1, trace2];
-        if (predictedPoint) {
-          const trace3 = {
-            x: [predictedPoint.x],
-            y: [predictedPoint.y],
-            mode: "markers",
-            type: "scatter",
-            name: "Predicted Point",
-            marker: {
-              color: "red",
-              size: 12,
-              symbol: "star",
-            },
-          };
-          traces.push(trace3);
         }
 
-        const layout = {
-          title: "Regression Analysis",
-          xaxis: { title: "Greyscale Value" },
-          yaxis: { title: "Concentration" },
-        };
+        function calculateRegression() {
+            const x = dataPoints.map((p) => p.x);
+            const y = dataPoints.map((p) => p.y);
+            const n = x.length;
 
-        Plotly.newPlot("plot", traces, layout);
-      }
+            const sumX = x.reduce((a, b) => a + b, 0);
+            const sumY = y.reduce((a, b) => a + b, 0);
+            const sumXY = x.reduce((a, b, i) => a + b * y[i], 0);
+            const sumX2 = x.reduce((a, b) => a + b * b, 0);
 
-      function predict() {
-        const input = parseFloat(
-          document.getElementById("greyscaleInput").value
-        );
-        if (isNaN(input)) {
-          document.getElementById("predictionResult").innerHTML =
-            '<div class="alert alert-danger">Please enter a valid number</div>';
-          return;
+            regressionModel.slope =
+                (n * sumXY - sumX * sumY) / (n * sumX2 - sumX * sumX);
+            regressionModel.intercept = (sumY - regressionModel.slope * sumX) / n;
         }
 
-        const prediction =
-          regressionModel.slope * input + regressionModel.intercept;
-        predictedPoint = { x: input, y: prediction };
+        function plotData() {
+            const x = dataPoints.map((p) => p.x);
+            const y = dataPoints.map((p) => p.y);
 
-        document.getElementById("predictionResult").innerHTML = `
-        <div class="alert alert-success">
-            Predicted concentration for greyscale value ${input.toFixed(2)}: 
-            <strong>${prediction.toFixed(4)}</strong>
-        </div>
-    `;
+            // Generate regression line points
+            const xRange = [Math.min(...x), Math.max(...x)];
+            const yRange = [
+                regressionModel.slope * xRange[0] + regressionModel.intercept,
+                regressionModel.slope * xRange[1] + regressionModel.intercept,
+            ];
 
-        plotData(); // Update the plot with new prediction
-      }
+            const trace1 = {
+                x: x,
+                y: y,
+                mode: "markers",
+                type: "scatter",
+                name: "Data Points",
+                marker: { color: "blue" },
+            };
+
+            const trace2 = {
+                x: xRange,
+                y: yRange,
+                mode: "lines",
+                type: "scatter",
+                name: "Regression Line",
+                line: { color: "green" },
+            };
+
+            // Add predicted point if available
+            const traces = [trace1, trace2];
+            if (predictedPoint) {
+                const trace3 = {
+                    x: [predictedPoint.x],
+                    y: [predictedPoint.y],
+                    mode: "markers",
+                    type: "scatter",
+                    name: "Predicted Point",
+                    marker: {
+                        color: "red",
+                        size: 12,
+                        symbol: "star",
+                    },
+                };
+                traces.push(trace3);
+            }
+
+            const layout = {
+                title: "Regression Analysis",
+                xaxis: { title: "Greyscale Value" },
+                yaxis: { title: "Concentration" },
+            };
+
+            Plotly.newPlot("plot", traces, layout);
+        }
+
+        function predict() {
+            const input = parseFloat(
+                document.getElementById("greyscaleInput").value
+            );
+            if (isNaN(input)) {
+                document.getElementById("predictionResult").innerHTML =
+                    '<div class="alert alert-danger">Please enter a valid number</div>';
+                return;
+            }
+
+            const prediction =
+                regressionModel.slope * input + regressionModel.intercept;
+            predictedPoint = { x: input, y: prediction };
+
+            document.getElementById("predictionResult").innerHTML = `
+                <div class="alert alert-success">
+                    Predicted concentration for greyscale value ${input.toFixed(2)}:
+                    <strong>${prediction.toFixed(4)}</strong>
+                </div>
+            `;
+
+            plotData(); // Update the plot with new prediction
+        }
     </script>
-  </body>
+</body>
 </html>
