--- a/index.html
+++ b/index.html
@@ -152,13 +152,10 @@
                         <i class="fas fa-vial card-icon" aria-hidden="true"></i>
                         <h3>Concentration Predictor</h3>
                         <p>Convert greyscale values to concentration measurements using calibration data</p>
-                        <div class="d-flex justify-content-center gap-3">
+                        <div class="d-flex justify-content-center">
                             <a href="concentrationpredictor.html" class="btn btn-custom">
                                 Open Tool <i class="fas fa-arrow-right ms-2" aria-hidden="true"></i>
                             </a>
-                            <button class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#concentrationModal">
-                                Learn More
-                            </button>
                         </div>
                     </div>
                 </div>
@@ -169,13 +166,10 @@
                         <i class="fas fa-image card-icon" aria-hidden="true"></i>
                         <h3>Image Analysis Tool</h3>
                         <p>Convert images to greyscale values to create datasets</p>
-                        <div class="d-flex justify-content-center gap-3">
+                        <div class="d-flex justify-content-center">
                             <a href="p2g convertor.html" class="btn btn-custom">
                                 Open Tool <i class="fas fa-arrow-right ms-2" aria-hidden="true"></i>
                             </a>
-                            <button class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#imageModal">
-                                Learn More
-                            </button>
                         </div>
                     </div>
                 </div>
@@ -183,60 +177,9 @@
         </div>
     </div>
 
-    <!-- Modals -->
-    <!-- Concentration Predictor Modal -->
-    <div class="modal fade" id="concentrationModal" tabindex="-1" aria-labelledby="concentrationModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="concentrationModalLabel">Concentration Predictor</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <p>This tool converts greyscale values from images into concentration measurements using calibration data. Perfect for lab research and data analysis.</p>
-                    <h6>Features:</h6>
-                    <ul>
-                        <li>Easy calibration process</li>
-                        <li>Supports multiple image formats</li>
-                        <li>Real-time concentration calculation</li>
-                    </ul>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <a href="concentrationpredictor.html" class="btn btn-primary">Open Tool</a>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Image Analysis Tool Modal -->
-    <div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="imageModalLabel">Image Analysis Tool</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <p>Transform images into greyscale datasets for further analysis. Ideal for preprocessing in scientific studies.</p>
-                    <h6>Features:</h6>
-                    <ul>
-                        <li>Fast image conversion</li>
-                        <li>Exportable datasets</li>
-                        <li>User-friendly interface</li>
-                    </ul>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <a href="p2g convertor.html" class="btn btn-primary">Open Tool</a>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <!-- Footer -->
     <footer class="text-center py-4 text-muted">
-        <p>BioAnalysis Toolkit © 2023 | Powered by GitHub Pages</p>
+        <p>Analysis Toolkit © 2025 | Powered by GitHub Pages</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
